gateway-api/public-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public
  namespace: kube-system
spec:
  gatewayClassName: cilium
  listeners:
    - name: wildcard-domain-https
      protocol: HTTPS
      hostname: "*.mh.internal"
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: wildcard-domain-tls
